[package]
name = "btcclient"
version = "0.1.0"
edition = "2021"

[dependencies]
args = "2.2.0"
clap = {version = "4.5.18", features = ["derive"]}
futures-util = "0.3.30"
serde = { version = "1.0.0", features = ["derive"]}
serde_json = {version = "1.0.128"}
tokio = { version = "1.20", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
tungstenite = "0.24.0"
