[package]
name = "btcclient"
version = "0.1.0"
edition = "2021"

[dependencies]
args = "2.2.0"
chrono = "0.4.38"
clap = {version = "4.5.18", features = ["derive"]}
futures-util = "0.3.30"
hmac = "0.12.1"
num-traits = "0.2.19"
padme-padding = "=0.1.1"
rand = "0.8.5"
ring = "0.17.8"
rsa = {version = "0.7.0", features = ["serde"]}
serde = { version = "1.0.0", features = ["derive"] }
serde_json = {version = "1.0.128"}
sha2 = "0.10.8"
signature = "2.2.0"
tokio = { version = "1.20", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
tungstenite = "0.24.0"
url = "2.5.2"
